--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Stone Paper Scissors Game</title>
+	<title>Rock Paper Scissors Game</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<header>
-		<h1>Stone Paper Scissors</h1>
+		<h1>Rock Paper Scissors</h1>
 	</header>
 
 	<div class="score-board">
@@ -16,7 +16,7 @@
 		<span id="user-score">0</span>:<span id="computer-score">0</span>
 	</div>
 	<div class="result">
-		<p>Paper Covers Stone!! You win :)</p>
+		<p>Let's Play The Game....</p>
 	</div>
 
 	<div class="choices">
