Update in background audio

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 	<script src="app.js" type="text/javascript" charset="utf-8"></script>
 
-	<audio src="audios/backgroundMusic.mp3" controls autoplay></audio>
+	<audio src="audios/backgroundMusic.mp3" controls autoplay hidden="true" loop="true"></audio>
 
 </body>
 </html>
